--- a/src/pages/Account/account.css
+++ b/src/pages/Account/account.css
@@ -24,3 +24,13 @@
     }
   }
 }
+
+.flex {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 20px;
+  flex: auto;
+}
