--- a/src/admin/Courses/AdminCourses.css
+++ b/src/admin/Courses/AdminCourses.css
@@ -13,6 +13,12 @@
       margin-top: 40px;
       margin-left: 5px;
     }
+    h1 {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #8a4baf;
+    }
   }
   .right {
     .course-form {
@@ -50,6 +56,7 @@
       .image {
         height: 150px;
         width: 150px;
+        margin-bottom: 5px;
       }
     }
   }
