--- a/src/admin/Utils/common.css
+++ b/src/admin/Utils/common.css
@@ -3,7 +3,7 @@
   height: 100%;
   left: 0;
   color: #fff;
-  border-right: 1px solid gray;
+  border-right: 3px solid #8a4baf;
   @media (max-width: 768px) {
     width: 30px;
   }
