--- a/src/pages/CourseStudy/CourseStudy.css
+++ b/src/pages/CourseStudy/CourseStudy.css
@@ -1,10 +1,24 @@
 .course-study-page {
-  padding: 50px 0;
-  background-color: #f5f5f5;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  min-height: 80vh;
+  background-color: #fff;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  margin-left: 40%;
+  margin-top: 3%;
+  margin-bottom: 3%;
+  width: 250px;
+  transition: 0.5s;
+  &:hover {
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
+  }
+  .course-image {
+    width: 80%;
+    height: 250px;
+    object-fit: fill;
+    border-radius: 10px;
+    margin-bottom: 10px;
+  }
 
   h2 {
     font-size: 24px;
