--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -6,6 +6,7 @@
 .heading {
   display: flex;
   justify-content: center;
+  color: #8a4baf;
 }
 .dashboard-content {
   display: flex;
@@ -14,4 +15,8 @@
   gap: 20px;
   margin-top: 40px;
   margin-bottom: 40px;
+
+  p {
+    color: #8a4baf;
+  }
 }
